<resources>
    <string name="app_name">IM</string>
    <string name="splash_text">欢迎来到I聊天</string>
    <string name="login_text">IM即时聊天</string>
    <string name="username_text">用户名：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="pwd">密　码：</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
